--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "alexa-sdk": "^1.0.10"
+    "alexa-sdk": "^1.0.10",
+    "request": "^2.86.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepackage": "rimraf ./alexa-skill.zip",
+    "package": "7z a -r ./alexa-skill.zip ./*.* && 7z a -r ./alexa-skill.zip ./node_modules",
+    "predeploy": "npm version patch && npm run package",
+    "deploy": "aws lambda update-function-code --profile devopstest --region us-east-1 --zip-file fileb://alexa-skill.zip --function-name Alexa-Cloud-Status --publish"
   }
 }
